--- a/charts/sda-svc/templates/s3-inbox-deploy.yaml
+++ b/charts/sda-svc/templates/s3-inbox-deploy.yaml
@@ -142,12 +142,14 @@ spec:
             port: liveness-port
           failureThreshold: 1
           periodSeconds: 10
+          timeoutSeconds: 10
         readinessProbe:
           httpGet:
             path: /ready
             port: liveness-port
           failureThreshold: 1
           periodSeconds: 5
+          timeoutSeconds: 10
         resources:
 {{ toYaml .Values.s3Inbox.resources | trim | indent 10 }}
         volumeMounts:
