--- a/charts/sda-db/templates/statefulset.yaml
+++ b/charts/sda-db/templates/statefulset.yaml
@@ -46,8 +46,8 @@ spec:
           - -cx
           - |
             {{- if and  .Values.persistence.volumePermissions .Values.persistence.enabled }}
-            mkdir -p /psql/data
-            chmod 700 /psql/data
+            mkdir -p /psql/pgdata
+            chmod 700 /psql/pgdata
             find /psql -mindepth 1 -maxdepth 1 -not -name ".snapshot" -not -name "lost+found" | xargs chown -R 70:70
             {{- end }}
             {{- if and .Values.global.tls.enabled (not .Values.externalPkiService.tlsPath) }}
@@ -109,6 +109,8 @@ spec:
         - name: NOTLS
           value: "true"
       {{- end }}
+        - name: PGDATA
+          value: {{ template "pgData" }}
         ports:
         - containerPort: 5432
           name: postgres
